[#50091717] User should be able to select from preset times, or enter their own -- Custom site-wide scrollbar, client-side time validation, fixed a bug displaying default days, small clean-ups

--- a/app/public/css/home.less
+++ b/app/public/css/home.less
@@ -16,7 +16,8 @@
 				margin-bottom: 5px;
 
 				.text-error {
-					margin: 0.75em 0 0 0;
+					margin: 0.5em 0 0.5em 0;
+					text-align: center;
 				}
 
 				.control-label {
@@ -42,7 +43,7 @@
 				}
 
 				&.time-control-group {
-					margin-bottom: 10px;
+					margin-bottom: 0em;
 
 					.from, .to {
 						display: inline-block;
@@ -91,7 +92,11 @@
 			}
 
 			.event-alert {
-				margin-bottom: 0;
+				margin-bottom: 0em;
+
+				.event-submit-comment {
+					margin-bottom: 0em;
+				}
 			}
 		}
 	}
